Se agrego algunos estilos para el footer y se predeterminó el esquema para crear los estilos

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,7 @@
 /* ---------------- Footer ---------------- */
 
 footer{
-    background-color: #4C4C4B; /* Irá con degradado */
+    background-color: #4C4C4B; /* Irá con degradado este footer era una prueba para berificar la conección con la hja de estilos, pero debe quedarse allí*/
     padding: 3px 0;
 }
 
