--- a/css/styles.css
+++ b/css/styles.css
@@ -13,20 +13,70 @@
 /* ---------------- Estilos Globales ---------------- */
 
 *{
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
-/* ---------------- Footer ---------------- */
+@font-face {
+    font-family: 'happy_monkeyregular';
+    src: url('../Fonts/happy_monkeyregular/HappyMonkey-Regular-webfont.eot');
+    src: url('../Fonts/happy_monkeyregular/HappyMonkey-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../Fonts/happy_monkeyregular/HappyMonkey-Regular-webfont.woff2') format('woff2'),
+         url('../Fonts/happy_monkeyregular/HappyMonkey-Regular-webfont.woff') format('woff'),
+         url('../Fonts/happy_monkeyregular/HappyMonkey-Regular-webfont.ttf') format('truetype'),
+         url('../Fonts/happy_monkeyregular/HappyMonkey-Regular-webfont.svg#happy_monkeyregular') format('svg');
+    font-weight: normal;
+    font-style: normal
+}
 
 footer{
-    background-color: #4C4C4B; /* Irá con degradado este footer era una prueba para berificar la conección con la hja de estilos, pero debe quedarse allí*/
+    background-color: #4C4C4B; /* Irá con degradado este footer era una prueba para verificar la conección con la hoja de estilos, pero debe quedarse allí*/
     padding: 3px 0;
 }
 
 
 /* ---------------- Estilos del Home ---------------- */
+header{
+	background: url(../img/Background-Example.jpg) no-repeat center;
+	background-size: cover;
+}
 
+.logo{
+	width: 30%;
+}
+
+.header-nav{
+	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(255,255,255,-1)), to(rgba(192,192,192,1)));
+}
+
+.first-nav{
+	float: right;
+}
+
+.first-nav a{
+	color: #fff;
+	font-size: 1rem;
+	text-decoration: none;
+}
+
+.first-nav li{
+	font-family: 'happy_monkeyregular';
+	list-style: none;
+	display:inline-block;
+}
+
+.first-nav li ul li{
+	display:block;
+}
+
+.first-nav li ul{
+	position: fixed;
+	display: none;
+}
+
+.first-nav li:hover ul{
+	display: block;
+}
 
 /* ---------------- Estilos de la sección Productos ---------------- */
 
