--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ footer{
 
 
 /* ---------------- Estilos del Home ---------------- */
-header{
+.header-home{
 	background: url(../img/Background-Example.jpg) no-repeat center;
 	background-size: cover;
 }
