Se agregó una hoja de estilos especial extra del proyecto para un efecto de hover y estilos de la galería de productos

--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,13 @@ ul{
 	width: 70%;
 }
 
+/*------------------Galería-----------------------*/
+
+.div-category{
+	width: 86%;
+	height: 800px;
+	margin: 20px auto;
+}
 
 
 /* ---------------- Estilos de la sección Proyectos ---------------- */
