--- a/css/styles.css
+++ b/css/styles.css
@@ -136,17 +136,22 @@ ul{
 
 .logo{
 	width: 400px;
+	position: absolute;
 }
 
 .header-nav{
 	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(65,65,65,0.53)), to(rgba(155,155,155,0.90)));
+	padding-right: 9%;
+	padding: 55px;
 }
 
 .first-nav{
-
+	float: right;
+	margin-right: 8%;
 }
 
 .first-nav a{
+
 	color: #fff;
 	font-size: 1.41rem;
 	text-decoration: none;
@@ -157,13 +162,10 @@ ul{
 	display:inline-block;
 	font-family: 'happy_monkeyregular';
 	margin: 0px 30px 0px 30px;
-	margin-bottom: 35px;
+	margin-bottom: 0px;
 }
 
-.li-logo{
-	display:inline-block;
-	margin: 0;
-}
+
 
 .first-li a:hover {
 	color: #9FC559;
@@ -171,28 +173,24 @@ ul{
 }
 
 .sub-menu a{
-	color: #5a5a5a;
+	color: #95D5F2;
 	font-size: 1.2rem;
 }
-.sub-menu a:hover{
-	color: #73844f;
-	font-size: 1.2rem;
-}
-
 
 .sub-menu li{
+	background-color: #555757;
 	font-size: 1.2rem;
 	display:block;
-	margin-bottom: 15px;
+	margin-bottom: 4px;
+	padding: 9px 5px 9px 9px;
 }
 
 .sub-menu{
-	background-color: rgba(255,255,255,0.7);
 	border-radius: 5px;
 	display: none;
 	margin-left: -17px;
 	padding: 11px;
-	position: fixed;
+	position: absolute;
 }
 
 .first-li:hover ul{
@@ -202,6 +200,60 @@ ul{
 .first-nav li:hover{
 	border-bottom: 1px solid  #9FC559;
 }
+
+.sub-menu li:hover a{
+	color: #555757;
+}
+
+.sub-menu li:hover{
+	border-bottom: 1px solid  #000;
+	background-color: #95D5F2;
+}
+
+.title-header{
+	margin: 0 auto;
+	background-color: rgba(147,212,244,0.3);
+	text-align: center;
+	width: 40%;
+	margin-top: 104px;
+}
+
+.title-header h1{
+	color: #DEDD51;
+	font-family: 'happy_monkeyregular';
+	font-size: 3.6rem;
+	text-transform: uppercase;
+	padding-bottom: 30px;
+}
+
+.title-header p{
+	color: #9FC559;
+	font-size: 2rem;
+	padding-bottom: 30px;
+	}
+
+.header-button{
+	margin: 0 auto;
+	width: 278px;
+	font-family: 'happy_monkeyregular';
+	padding: 15px;
+	margin-top: 1rem;
+}
+
+.button-products{
+	padding: 10px 25px 10px 25px;
+	border: 1px solid #93D4F4;
+	font-size: 22px;
+	color: #ddd;
+	background-color: rgba(147,212,244,0.4);
+}
+
+.button-products:hover{
+	border: 1px solid #fff;
+	color: #fff;
+	background-color: rgba(255,255,255,0.4);
+}
+
 
 
 /* ---------------- Estilos de la sección Productos ---------------- */
