Se añadieron estilos para la sección contactos

--- a/css/styles.css
+++ b/css/styles.css
@@ -292,7 +292,7 @@ footer img{
 	background-color: #344C53;
 }
 
-.header-projects-nes, .subsection-infobox{
+.header-projects-news, .subsection-infobox{
 	background-color: #127059;
 	overflow: hidden;
 }
