--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,23 @@ footer img{
 	background-color: rgba(255,255,255,0.4);
 }
 
+/* ---------------- Estilos del Acerca de ---------------- */
+.subsection-about{
+	background-color: #262625;
+}
+
+.subsection-about > p{
+	float: left;
+	line-height: 28px;
+	margin-left: 111px;
+	text-align: left;
+	width: 60%;
+}
+
+.subsection-about img{
+	margin: 33px 0 100px 33px;
+	width: 330px;
+} 
 
 /* ---------------- Estilos de la sección Productos ---------------- */
 
